# ArthaOS

./: .gitignore  Cargo.toml  README.md
app/: package-lock.json  package.json  tailwind.config.js
app/src/: App.tsx  index.css  main.tsx
app/src/components/: QuickAddModal.tsx  Sidebar.tsx
app/src/features/dashboard/: DashboardView.tsx
app/src/features/import/: ImportView.tsx
app/src/features/lock/: LockScreen.tsx
app/src/features/settings/: SettingsView.tsx
app/src/hooks/: useKeyboardShortcuts.ts
app/src/lib/: apiClient.ts  format.ts  nativeBridge.ts
app/src/stores/: appShell.ts  quickAdd.ts
core/: Cargo.toml
core/src/: categorization.rs  csv_import.rs  dto.rs  lib.rs  settings.rs  storage.rs
local/: Cargo.toml  tauri.conf.json
local/icons/: README.md
local/src/: keychain.rs  main.rs
schema/: inbox-commit.json  inbox.json  networth-curve.json  summary-month.json
