[package]
name = "artha-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
csv = "1.3"
hex = "0.4"
once_cell = "1.20"
parking_lot = "0.12"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled", "functions", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.43", features = ["rt", "macros"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
log = "0.4"
