[package]
name = "artha-local"
version = "0.1.0"
description = "Tauri shell for Artha OS"
authors = ["Artha OS"]
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["api-all", "macos-private-api"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0"
time = "0.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
security-framework = "2.11"
rand = "0.8"
dirs = "5.0"
parking_lot = "0.12"

[dependencies.artha-core]
path = "../core"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }
